[SC-7028] changed 'Min' to 'Max', added placeholders and disabling for number boxes, fixed bug with array type fields, expanded valuesBelow fields, added left alignment for the isPublished field, changed order of some fields

--- a/src/app/pfm/offer-edit/offer-edit.component.less
+++ b/src/app/pfm/offer-edit/offer-edit.component.less
@@ -105,6 +105,7 @@
                 .detailItem {
                     display: flex;
                     align-items: center;
+                    position: relative;
                     .mat-form-field {
                         width: 100%;
                     }
@@ -162,6 +163,12 @@
                 margin-left: 10px;
             }
 
+            &.leftAlignment {
+                label + * {
+                    flex: 2;
+                }
+            }
+
             &.center {
                 label {
                     flex: initial;
@@ -182,6 +189,10 @@
                         span {
                             margin-left: 0;
                         }
+                    }
+                    label + *,
+                    .dx-widget {
+                        width: 100%;
                     }
                 }
             }
